manifests-emojivote/ingress/ingress-vote-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/elb.port: "80"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
  labels:
    isExternal: "true"
    zone: data
  name: ingress-vote
  namespace: emojivote
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: vote-rest
            port:
              number: 3001
        path: /vote
        pathType: ImplementationSpecific
        property:
          ingress.beta.kubernetes.io/url-match-mode: STARTS_WITH
