manifests-emojivote/ingress/ingress-webapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/elb.port: "443"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    isExternal: "true"
    zone: data
  name: demo-web
  namespace: emojivote
spec:
  rules:
  - host: carlosrv999.com
    http:
      paths:
      - backend:
          service:
            name: emoji-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
        property:
          ingress.beta.kubernetes.io/url-match-mode: STARTS_WITH
  tls:
  - hosts:
    - "carlosrv999.com"
    secretName: cert-carlosrv999-com
